@@ -104,6 +104,7 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [StatS] Change format of metricID when specifying fields ( e.g. *sum#~*req.FieldName )
   * [FilterS] Added *apiban filter
   * [EEs] Add support for *elastic exporter
+  * [AttributeS] Add support for adding fields from other places that event (e.g. Resource.TotalUsage, Stat.MetricName, Account.Balance)
   
  -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200
 
